Changes after running Android Lint